--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "script.js",
   "dependencies": {
     "cypress": "^8.3.0",
+    "date-fns": "^2.23.0",
     "serve": "^12.0.0"
   },
   "devDependencies": {},
